[tool.poetry]
name = "lr2"
version = "0.1.0"
description = ""
authors = ["YourUsername <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
numpy = "^2.2.6"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
